fix overlapping experience and portfolio sections by replacing experience  css w boilerplate code

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   --primary-dark: rgb(52, 58, 64);
   --primary-yellow: #b8cc00;
   --primary-hover-yellow: #b8cc00;
+  --primary-black: #000000;
 }
 
 body {
@@ -207,7 +208,8 @@ nav ul li {
   border-bottom: 0.3125rem solid var(--primary-yellow);
   padding: 0.625rem;
   margin-bottom: 1.875rem;
-  background: var(--primary-white)
+  background: var(--primary-white);
+  transition: 0.3s ease-in-out;
 }
 
 .services .box:hover {
@@ -228,7 +230,7 @@ nav ul li {
 }
 
 /*------------ EXPERIENCE --------------*/
-
+/* 
 .experience {
   padding: 0.7rem;
 }
@@ -245,7 +247,7 @@ nav ul li {
 }
 
 .experience-wrapper::before {
-  position: relative;
+  position: absolute;
   content: '';
   top: 0;
   left: 50%;
@@ -293,10 +295,97 @@ nav ul li {
   margin-top: 0.3125rem;
   color: var(--primary-red);
   font-weight: 900;
+} */
+
+/* ***************** EXPERIENCE (connor) ***************************  */
+.experience{
+  padding: 0.7rem;
+}
+.experience-wrapper{
+   position: relative;
+   padding: 3.125rem;
+   overflow: hidden;
 }
 
+.experience h1 {
+  text-transform:uppercase;
+  color: var(--primary-orange);
+}
+
+.experience-wrapper::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 50%;
+  margin-left: -0.0625rem;
+  width:0.125rem;
+  height: 100%;
+  background:var(--primary-dark);
+  z-index: 1;
+}
+.timeline-block{
+  width: calc(50% + 0.5rem);
+  display: flex;
+  justify-content:space-between;
+  clear:both;
+}
+
+.timeline-block-right{
+ float:right;
+}
+
+.timeline-block-left{
+  float:left;
+  direction: rtl;
+}
+
+.marker{
+  width: 1rem;
+  height: 1rem;
+  border-radius:50%;
+  border: 0.3125rem solid var(--primary-dark-gray);
+  /* border: 0.3125rem solid var(-); */
+  background: var(--primary-orange);
+  margin-top: 0.625rem;
+  z-index: 3;
+}
+
+.timeline-content{
+  width: 95%;
+  padding: 0 0.9375rem;
+  color: var(--primary-dark-gray);
+  direction: ltr;
+}
+
+.timeline-content h3{
+  margin-top: 0.3125rem;
+  color: var(--primary-red);
+}
+
+
+/* ***************** EXPERIENCE MEDIA (connor) ***************************  */
+@media(max-width:758px){
+  .experience .container{
+    padding-left:0;
+  }
+  .experience-wrapper::before{
+    left:0.5rem;
+    margin-bottom:1.875rem;
+  }
+  .timeline-block-right{
+    float:none;
+    width:100%;
+  }
+  .timeline-block-left{
+   float:none;
+   direction: ltr;
+   width:100%;
+ }
+}
+
+
 /*------------ MEDIA --------------*/
-@media(max-width: 768px) {
+/* @media(max-width: 758px) {
   .experience-wrapper .container {
     padding-left: 0;
   }
@@ -314,4 +403,42 @@ nav ul li {
     direction: ltr;
     width: 100%;
   }
+} */
+
+/*------------ PORTFOLIO --------------*/
+.portfolio-wrapper {
+  background: var(--primary-light-grey);
+  padding: 3rem 0;
+}
+
+.portfolio-wrapper h1{
+  color: var(--primary-yellow);
+ }
+
+.portfolio-image {
+  width: 15rem;
+  border: 1px solid var(--primary-hover-yellow);
+  padding: 0 0.5rem;
+}
+
+.portfolio-image-box {
+  position: relative;
+  margin: 1rem;
+}
+
+/***************** Overflow Box ******************/
+.overflow {
+  position: absolute;
+  opacity: 0;
+  background: var(--primary-black);
+  width: 15rem;
+  height: 8rem;
+  top: 0;
+  border: 1px solid var(--primary-yellow);
+  cursor: pointer;
+}
+
+.portfolio-image-box:hover .overflow {
+  opacity: 60%;
+  transition: 0.3s ease-in-out;
 }
